--- a/_css/specs.css
+++ b/_css/specs.css
@@ -8,9 +8,16 @@ iframe#frame-spec {
     width: 450px;
     height: 280px;
     border: none;
-    overflow: hidden;
 }
 
 iframe#frame-spec::-webkit-scrollbar {
+    display: none;
+}
+
+#frame-spec body {
+    overflow: hidden;
+}
+
+#frame-spec body::-webkit-scrollbar {
     display: none;
 }
