--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,265 +1,258 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
 @font-face {
-    font-family: 'fontelogo';
-    src: url("../_fonts/bubblegum-sans-regular.otf");
+  font-family: 'fontelogo';
+  src: url('../_fonts/bubblegum-sans-regular.otf');
 }
 
 body {
-    background-color: #dddddd;
-    color: rgba(0, 0, 0, 1);
-    font-family: Arial, Helvetica, sans-serif;
+  background-color: #dddddd;
+  color: rgba(0, 0, 0, 1);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-div#interface {
-    width: 1200px;
-    background-color: white;
-    margin: -20px auto 0px auto;
-    box-shadow: 0px 0px 10px grey;
-    padding: 10px 10px 10px 10px;
+#interface {
+  width: 1200px;
+  background-color: white;
+  margin: -20px auto 0px auto;
+  box-shadow: 0px 0px 10px grey;
+  padding: 10px 10px 10px 10px;
 }
 
 a {
-    color: #606060;
-    text-decoration: none;
+  color: #606060;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 p {
-    text-align: justify;
-    text-indent: 50px;
+  text-align: justify;
+  text-indent: 50px;
 }
 
-header#cabecalho {
-    border-bottom: 1px #606060 solid;
-    height: 150px;
-    background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 80px;
+#cabecalho {
+  border-bottom: 1px #606060 solid;
+  height: 150px;
+  background: url('../_imagens/glass-logo-peq.jpg') no-repeat 0px 80px;
 }
 
-header#cabecalho h1 {
-    font-family: 'fontelogo', Helvetica, sans-serif;
-    font-size: 30pt;
-    color: grey;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, .6);
-    padding: 0px;
-    margin-bottom: 0px;
+#cabecalho h1 {
+  font-family: 'fontelogo', Helvetica, sans-serif;
+  font-size: 30pt;
+  color: grey;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
+  padding: 0px;
+  margin-bottom: 0px;
 }
 
-header#cabecalho h3 {
-    font-family: 'Titillium Web', sans-serif;
-    color: #888888;
-    font-size: 15pt;
-    padding: 0px;
-    margin-top: 0px;
+#cabecalho h3 {
+  font-family: 'Titillium Web', sans-serif;
+  color: #888888;
+  font-size: 15pt;
+  padding: 0px;
+  margin-top: 0px;
 }
 
-header#cabecalho img#icone {
-    position: absolute;
-    left: 1100px;
-    top: 30px;
+#cabecalho img {
+  position: absolute;
+  left: 1100px;
+  top: 30px;
 }
 
-
-/*
-h2 {
-    text-align: center;
-}*/
-
-figure.foto-legenda {
-    border: 8px solid white;
-    box-shadow: 1px 1px 4px black;
-    position: relative;
+.foto-legenda {
+  border: 8px solid white;
+  box-shadow: 1px 1px 4px black;
+  position: relative;
 }
 
-figure.foto-legenda img {
-    width: 100%;
-    height: 100%;
+.foto-legenda img {
+  width: 100%;
+  height: 100%;
 }
 
-figure.foto-legenda figcaption {
-    opacity: 0;
-    position: absolute;
-    top: 0px;
-    background-color: rgba(0, 0, 0, .4);
-    color: white;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    transition: opacity 1s;
-    -webkit-transition: opacity 1s;
-    -moz-transition: opacity 1s;
-    -ms-transition: opacity 1s;
-    -o-transition: opacity 1s;
+.foto-legenda figcaption {
+  opacity: 0;
+  position: absolute;
+  top: 0px;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  transition: opacity 1s;
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -ms-transition: opacity 1s;
+  -o-transition: opacity 1s;
 }
 
-figure.foto-legenda:hover figcaption {
-    opacity: 1;
+.foto-legenda:hover figcaption {
+  opacity: 1;
 }
-
 
 /*formatação do menu*/
 
-nav#menu {
-    display: block;
+#menu {
+  display: block;
+  height: 30px;
 }
 
-nav#menu ul {
-    list-style: none;
-    text-transform: uppercase;
-    position: absolute;
-    top: -20px;
-    left: 400px;
-    box-shadow: 0px 0px 10px grey;
-    background-color: #dddddd;
-    padding: 0;
+#menu ul {
+  list-style: none;
+  text-transform: uppercase;
+  position: absolute;
+  top: -20px;
+  left: 400px;
+  box-shadow: 0px 0px 10px grey;
+  background-color: #dddddd;
+  padding: 0;
 }
 
-nav#menu li {
-    display: inline-block;
-    background-color: #dddddd;
-    padding: 10px;
-    margin: 1px;
-    transition: background-color 1s;
-    -webkit-transition: background-color 1s;
-    -moz-transition: background-color 1s;
-    -ms-transition: background-color 1s;
-    -o-transition: background-color 1s;
+#menu li {
+  display: inline-block;
+  background-color: #dddddd;
+  padding: 10px;
+  margin: 1px;
+  transition: background-color 1s;
+  -webkit-transition: background-color 1s;
+  -moz-transition: background-color 1s;
+  -ms-transition: background-color 1s;
+  -o-transition: background-color 1s;
 }
 
-nav#menu li:hover {
-    background-color: #606060;
+#menu li:hover {
+  background-color: #606060;
 }
 
-nav#menu h1 {
-    display: none;
+#menu h1 {
+  display: none;
 }
 
-nav#menu a {
-    color: #000000;
-    text-decoration: none;
+#menu a {
+  color: #000000;
+  text-decoration: none;
 }
 
-nav#menu a:hover {
-    color: white;
+#menu a:hover {
+  color: white;
 }
-
 
 /*final do menu*/
 
-section#corpo {
-    display: block;
-    width: 700px;
-    float: left;
-    padding-right: 15px;
-    padding-bottom: 10px;
-    border-right: 1px #606060 solid;
+#corpo {
+  display: block;
+  width: 700px;
+  float: left;
+  padding-right: 15px;
+  padding-bottom: 10px;
+  border-right: 1px #606060 solid;
 }
 
-article#noticia-principal h2 {
-    font-size: 13pt;
-    color: #000000;
-    background-color: #dddddd;
-    padding: 5px 0px 5px 10px;
-    margin: 10px 0px 10px 0px;
+#noticia-principal h2 {
+  font-size: 13pt;
+  color: #000000;
+  background-color: #dddddd;
+  padding: 5px 0px 5px 10px;
+  margin: 10px 0px 10px 0px;
 }
 
-header#cabecalho-artigo h1 {
-    font-family: 'FonteLogo', sans-serif;
-    font-size: 20pt;
-    color: #606060;
-    margin-bottom: 0px;
-    margin-top: 0px;
+#cabecalho-artigo h1 {
+  font-family: 'FonteLogo', sans-serif;
+  font-size: 20pt;
+  color: #606060;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 
-header#cabecalho-artigo h2 {
-    font-size: 13pt;
-    color: #706f6f;
-    background-color: #ffffff;
-    margin: 0px;
-    padding: 0px;
+#cabecalho-artigo h2 {
+  font-size: 13pt;
+  color: #706f6f;
+  background-color: #ffffff;
+  margin: 0px;
+  padding: 0px;
 }
 
-header#cabecalho-artigo h3 {
-    font-size: 12px;
-    color: #606060;
+#cabecalho-artigo h3 {
+  font-size: 12px;
+  color: #606060;
 }
 
 .direita {
-    text-align: right;
+  text-align: right;
 }
 
-table#tabelaspec {
-    border: 1px solid #606060;
-    border-spacing: 0px;
-    margin-left: auto;
-    margin-right: auto;
+#tabelaspec {
+  border: 1px solid #606060;
+  border-spacing: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-table#tabelaspec td {
-    border: 1px solid #606060;
-    padding: 10px;
-    vertical-align: middle;
+#tabelaspec td {
+  border: 1px solid #606060;
+  padding: 10px;
+  vertical-align: middle;
 }
 
-table#tabelaspec td.ce {
-    color: white;
-    background-color: #606060;
-    vertical-align: top;
-    text-align: right;
-    font-weight: bold;
+#tabelaspec td.ce {
+  color: white;
+  background-color: #606060;
+  vertical-align: top;
+  text-align: right;
+  font-weight: bold;
 }
 
-table#tabelaspec td.cd {
-    background-color: #cceecc;
+#tabelaspec td.cd {
+  background-color: #cceecc;
 }
 
-table#tabelaspec caption {
-    color: #888888;
-    font-size: 13pt;
-    font-weight: bolder;
+#tabelaspec caption {
+  color: #888888;
+  font-size: 13pt;
+  font-weight: bolder;
 }
 
-table#tabelaspec caption span {
-    display: block;
-    float: right;
-    color: #000000;
-    font-size: 8pt;
-    padding-top: 10px;
+#tabelaspec caption span {
+  display: block;
+  float: right;
+  color: #000000;
+  font-size: 8pt;
+  padding-top: 10px;
 }
 
-aside#lateral {
-    display: block;
-    width: 450px;
-    float: right;
-    padding-right: 15px;
-    background-color: #dddddd;
-    padding: 10px;
-    margin-top: 10px;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
+#lateral {
+  display: block;
+  width: 450px;
+  float: right;
+  padding-right: 15px;
+  background-color: #dddddd;
+  padding: 10px;
+  margin-top: 10px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
-aside#lateral h1 {
-    font-family: 'FonteLogo', sans-serif;
-    font-size: 20pt;
-    color: #606060;
-    margin-top: 0px;
+#lateral h1 {
+  font-family: 'FonteLogo', sans-serif;
+  font-size: 20pt;
+  color: #606060;
+  margin-top: 0px;
 }
 
-aside#lateral h2 {
-    background-color: #606060;
-    font-size: 13pt;
-    color: white;
-    padding: 5px;
+#lateral h2 {
+  background-color: #606060;
+  font-size: 13pt;
+  color: white;
+  padding: 5px;
 }
 
-footer#rodape {
-    clear: both;
-    border-top: 1px #606060 solid;
+#rodape {
+  clear: both;
+  border-top: 1px #606060 solid;
 }
 
-footer#rodape {
-    text-align: center;
+#rodape {
+  text-align: center;
 }
