--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -9,14 +9,21 @@ body {
   background-color: #dddddd;
   color: rgba(0, 0, 0, 1);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 #interface {
-  width: 1200px;
+  max-width: 1200px;
   background-color: white;
   margin: -20px auto 0px auto;
   box-shadow: 0px 0px 10px grey;
   padding: 10px 10px 10px 10px;
+  position: relative;
+}
+
+#main {
+  display: flex;
+  justify-content: space-between;
 }
 
 a {
@@ -34,18 +41,21 @@ p {
 }
 
 #cabecalho {
+  background: url('../_imagens/glass-logo-peq.jpg') no-repeat;
+  background-position: left 90%;
   border-bottom: 1px #606060 solid;
-  height: 150px;
-  background: url('../_imagens/glass-logo-peq.jpg') no-repeat 0px 80px;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 20px;
 }
 
 #cabecalho h1 {
+  color: grey;
   font-family: 'fontelogo', Helvetica, sans-serif;
   font-size: 30pt;
-  color: grey;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
+  margin: 0px;
   padding: 0px;
-  margin-bottom: 0px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
 }
 
 #cabecalho h3 {
@@ -56,10 +66,34 @@ p {
   margin-top: 0px;
 }
 
+#cabecalho hgroup {
+  position: relative;
+  top: -42px;
+}
+
 #cabecalho img {
   position: absolute;
-  left: 1100px;
+  right: 20px;
   top: 30px;
+}
+
+
+@media (max-width: 1140px) {
+  #cabecalho {
+    align-items: stretch;
+    background-position: center 90%;
+    padding-bottom: 60px;
+  }
+
+  #cabecalho hgroup {
+    position: relative;
+    top: 0;
+    text-align: center;
+  }
+
+  #cabecalho img {
+    display: none;
+  }
 }
 
 .foto-legenda {
@@ -96,25 +130,24 @@ p {
 /*formatação do menu*/
 
 #menu {
-  display: block;
-  height: 30px;
+  display: flex;
+  justify-content: center;
+  order: -1;
+  z-index: 10;
 }
 
 #menu ul {
   list-style: none;
   text-transform: uppercase;
-  position: absolute;
-  top: -20px;
-  left: 400px;
   box-shadow: 0px 0px 10px grey;
   background-color: #dddddd;
   padding: 0;
+  border-radius: 40px;
+  overflow: hidden;
 }
 
 #menu li {
   display: inline-block;
-  background-color: #dddddd;
-  padding: 10px;
   margin: 1px;
   transition: background-color 1s;
   -webkit-transition: background-color 1s;
@@ -123,29 +156,28 @@ p {
   -o-transition: background-color 1s;
 }
 
-#menu li:hover {
-  background-color: #606060;
-}
-
 #menu h1 {
   display: none;
 }
 
 #menu a {
+  display: block;
+  background-color: #dddddd;
+  padding: 10px;
   color: #000000;
   text-decoration: none;
 }
 
 #menu a:hover {
   color: white;
+  background-color: #606060;
 }
 
 /*final do menu*/
 
 #corpo {
   display: block;
-  width: 700px;
-  float: left;
+  flex: 3;
   padding-right: 15px;
   padding-bottom: 10px;
   border-right: 1px #606060 solid;
@@ -225,8 +257,7 @@ p {
 
 #lateral {
   display: block;
-  width: 450px;
-  float: right;
+  flex: 2;
   padding-right: 15px;
   background-color: #dddddd;
   padding: 10px;
@@ -255,4 +286,21 @@ p {
 
 #rodape {
   text-align: center;
+}
+
+@media (max-width: 920px) {
+  #main {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 680px) {
+  #menu ul {
+    flex: 1;
+  }
+
+  #menu ul li {
+    display: block;
+    text-align: center;
+  }
 }
