--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,306 +1,308 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
 @font-face {
-  font-family: 'fontelogo';
-  src: url('../_fonts/bubblegum-sans-regular.otf');
+    font-family: 'fontelogo';
+    src: url('../_fonts/bubblegum-sans-regular.otf');
 }
 
 body {
-  background-color: #dddddd;
-  color: rgba(0, 0, 0, 1);
-  font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
+    background-color: #dddddd;
+    color: rgba(0, 0, 0, 1);
+    font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 #interface {
-  max-width: 1200px;
-  background-color: white;
-  margin: -20px auto 0px auto;
-  box-shadow: 0px 0px 10px grey;
-  padding: 10px 10px 10px 10px;
-  position: relative;
+    max-width: 1200px;
+    background-color: white;
+    margin: -20px auto 0px auto;
+    box-shadow: 0px 0px 10px grey;
+    padding: 10px 10px 10px 10px;
+    position: relative;
 }
 
 #main {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 a {
-  color: #606060;
-  text-decoration: none;
+    color: #606060;
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 p {
-  text-align: justify;
-  text-indent: 50px;
+    text-align: justify;
+    text-indent: 50px;
+}
+
+img {
+    max-width: 100%;
 }
 
 #cabecalho {
-  background: url('../_imagens/glass-logo-peq.jpg') no-repeat;
-  background-position: left 90%;
-  border-bottom: 1px #606060 solid;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 20px;
+    background: url('../_imagens/glass-logo-peq.jpg') no-repeat;
+    background-position: left 90%;
+    border-bottom: 1px #606060 solid;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20px;
 }
 
 #cabecalho h1 {
-  color: grey;
-  font-family: 'fontelogo', Helvetica, sans-serif;
-  font-size: 30pt;
-  margin: 0px;
-  padding: 0px;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
+    color: grey;
+    font-family: 'fontelogo', Helvetica, sans-serif;
+    font-size: 30pt;
+    margin: 0px;
+    padding: 0px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
 }
 
 #cabecalho h3 {
-  font-family: 'Titillium Web', sans-serif;
-  color: #888888;
-  font-size: 15pt;
-  padding: 0px;
-  margin-top: 0px;
+    font-family: 'Titillium Web', sans-serif;
+    color: #888888;
+    font-size: 15pt;
+    padding: 0px;
+    margin-top: 0px;
 }
 
 #cabecalho hgroup {
-  position: relative;
-  top: -42px;
+    position: relative;
+    top: -42px;
 }
 
 #cabecalho img {
-  position: absolute;
-  right: 20px;
-  top: 30px;
+    position: absolute;
+    right: 20px;
+    top: 30px;
 }
 
-
 @media (max-width: 1140px) {
-  #cabecalho {
-    align-items: stretch;
-    background-position: center 90%;
-    padding-bottom: 60px;
-  }
-
-  #cabecalho hgroup {
-    position: relative;
-    top: 0;
-    text-align: center;
-  }
-
-  #cabecalho img {
-    display: none;
-  }
+    #cabecalho {
+        align-items: stretch;
+        background-position: center 90%;
+        padding-bottom: 60px;
+    }
+    #cabecalho hgroup {
+        position: relative;
+        top: 0;
+        text-align: center;
+    }
+    #cabecalho img {
+        display: none;
+    }
 }
 
 .foto-legenda {
-  border: 8px solid white;
-  box-shadow: 1px 1px 4px black;
-  position: relative;
+    border: 8px solid white;
+    box-shadow: 1px 1px 4px black;
+    position: relative;
 }
 
 .foto-legenda img {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .foto-legenda figcaption {
-  opacity: 0;
-  position: absolute;
-  top: 0px;
-  background-color: rgba(0, 0, 0, 0.4);
-  color: white;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  transition: opacity 1s;
-  -webkit-transition: opacity 1s;
-  -moz-transition: opacity 1s;
-  -ms-transition: opacity 1s;
-  -o-transition: opacity 1s;
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    transition: opacity 1s;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
 }
 
 .foto-legenda:hover figcaption {
-  opacity: 1;
+    opacity: 1;
 }
+
 
 /*formatação do menu*/
 
 #menu {
-  display: flex;
-  justify-content: center;
-  order: -1;
-  z-index: 10;
+    display: flex;
+    justify-content: center;
+    order: -1;
+    z-index: 10;
 }
 
 #menu ul {
-  list-style: none;
-  text-transform: uppercase;
-  box-shadow: 0px 0px 10px grey;
-  background-color: #dddddd;
-  padding: 0;
-  border-radius: 40px;
-  overflow: hidden;
+    list-style: none;
+    text-transform: uppercase;
+    box-shadow: 0px 0px 10px grey;
+    background-color: #dddddd;
+    padding: 0;
+    border-radius: 40px;
+    overflow: hidden;
 }
 
 #menu li {
-  display: inline-block;
-  margin: 1px;
-  transition: background-color 1s;
-  -webkit-transition: background-color 1s;
-  -moz-transition: background-color 1s;
-  -ms-transition: background-color 1s;
-  -o-transition: background-color 1s;
+    display: inline-block;
+    margin: 1px;
+    transition: background-color 1s;
+    -webkit-transition: background-color 1s;
+    -moz-transition: background-color 1s;
+    -ms-transition: background-color 1s;
+    -o-transition: background-color 1s;
 }
 
 #menu h1 {
-  display: none;
+    display: none;
 }
 
 #menu a {
-  display: block;
-  background-color: #dddddd;
-  padding: 10px;
-  color: #000000;
-  text-decoration: none;
+    display: block;
+    background-color: #dddddd;
+    padding: 10px;
+    color: #000000;
+    text-decoration: none;
 }
 
 #menu a:hover {
-  color: white;
-  background-color: #606060;
+    color: white;
+    background-color: #606060;
 }
+
 
 /*final do menu*/
 
 #corpo {
-  display: block;
-  flex: 3;
-  padding-right: 15px;
-  padding-bottom: 10px;
-  border-right: 1px #606060 solid;
+    display: block;
+    flex: 3;
+    padding-right: 15px;
+    padding-bottom: 10px;
+    border-right: 1px #606060 solid;
 }
 
 #noticia-principal h2 {
-  font-size: 13pt;
-  color: #000000;
-  background-color: #dddddd;
-  padding: 5px 0px 5px 10px;
-  margin: 10px 0px 10px 0px;
+    font-size: 13pt;
+    color: #000000;
+    background-color: #dddddd;
+    padding: 5px 0px 5px 10px;
+    margin: 10px 0px 10px 0px;
 }
 
 #cabecalho-artigo h1 {
-  font-family: 'FonteLogo', sans-serif;
-  font-size: 20pt;
-  color: #606060;
-  margin-bottom: 0px;
-  margin-top: 0px;
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #cabecalho-artigo h2 {
-  font-size: 13pt;
-  color: #706f6f;
-  background-color: #ffffff;
-  margin: 0px;
-  padding: 0px;
+    font-size: 13pt;
+    color: #706f6f;
+    background-color: #ffffff;
+    margin: 0px;
+    padding: 0px;
 }
 
 #cabecalho-artigo h3 {
-  font-size: 12px;
-  color: #606060;
+    font-size: 12px;
+    color: #606060;
 }
 
 .direita {
-  text-align: right;
+    text-align: right;
 }
 
 #tabelaspec {
-  border: 1px solid #606060;
-  border-spacing: 0px;
-  margin-left: auto;
-  margin-right: auto;
+    border: 1px solid #606060;
+    border-spacing: 0px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #tabelaspec td {
-  border: 1px solid #606060;
-  padding: 10px;
-  vertical-align: middle;
+    border: 1px solid #606060;
+    padding: 10px;
+    vertical-align: middle;
 }
 
 #tabelaspec td.ce {
-  color: white;
-  background-color: #606060;
-  vertical-align: top;
-  text-align: right;
-  font-weight: bold;
+    color: white;
+    background-color: #606060;
+    vertical-align: top;
+    text-align: right;
+    font-weight: bold;
 }
 
 #tabelaspec td.cd {
-  background-color: #cceecc;
+    background-color: #cceecc;
 }
 
 #tabelaspec caption {
-  color: #888888;
-  font-size: 13pt;
-  font-weight: bolder;
+    color: #888888;
+    font-size: 13pt;
+    font-weight: bolder;
 }
 
 #tabelaspec caption span {
-  display: block;
-  float: right;
-  color: #000000;
-  font-size: 8pt;
-  padding-top: 10px;
+    display: block;
+    float: right;
+    color: #000000;
+    font-size: 8pt;
+    padding-top: 10px;
 }
 
 #lateral {
-  display: block;
-  flex: 2;
-  padding-right: 15px;
-  background-color: #dddddd;
-  padding: 10px;
-  margin-top: 10px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    display: block;
+    flex: 2;
+    padding-right: 15px;
+    background-color: #dddddd;
+    padding: 10px;
+    margin-top: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 #lateral h1 {
-  font-family: 'FonteLogo', sans-serif;
-  font-size: 20pt;
-  color: #606060;
-  margin-top: 0px;
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-top: 0px;
 }
 
 #lateral h2 {
-  background-color: #606060;
-  font-size: 13pt;
-  color: white;
-  padding: 5px;
+    background-color: #606060;
+    font-size: 13pt;
+    color: white;
+    padding: 5px;
 }
 
 #rodape {
-  clear: both;
-  border-top: 1px #606060 solid;
+    clear: both;
+    border-top: 1px #606060 solid;
 }
 
 #rodape {
-  text-align: center;
+    text-align: center;
 }
 
 @media (max-width: 920px) {
-  #main {
-    flex-direction: column;
-  }
+    #main {
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 680px) {
-  #menu ul {
-    flex: 1;
-  }
-
-  #menu ul li {
-    display: block;
-    text-align: center;
-  }
+    #menu ul {
+        flex: 1;
+    }
+    #menu ul li {
+        display: block;
+        text-align: center;
+    }
 }
