--- a/_css/form.css
+++ b/_css/form.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 form {
-    width: 600px;
+    max-width: 100%;
     margin: auto;
 }
 
@@ -10,6 +10,10 @@ textarea {
     font-weight: normal;
     font-size: 13pt;
     background-color: rgba(255, 255, 255, .8);
+}
+
+#mensagem {
+    max-width: 100%;
 }
 
 input:hover,
